--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,54 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/style.css" rel="stylesheet">
-    <title>Guessnica </title>
+    <title>frontend</title>
   </head>
   <body>
-
-   <nav class="bg-sky-900 text-white">
-  <div class="container mx-auto px-4 md:flex items-center gap-6">
-    <div class="flex items-center justify-between md:w-auto w-full">
-      <a href="#" class="py-5 px-2 text-white text-2xl   font-bold">Guessnica </a>
-      <div class="md:hidden flex items-center">
-        <button type="button" class="mobile-menu-button">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
-          </svg>
-        </button>
-      </div>
-    </div>
-
-    <div class="hidden md: bg-sky-900 md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 navigation-menu">
-      <a href="#" class="py-2 px-3 block">tEŻ POUSTE</a>
-      <a href="#" class="py-2 px-3 block">puste</a>
-      <div class="relative">
-        <button type="button" class="dropdown-toggle py-2 px-3 hover:bg-sky-900 flex items-center gap-2 rounded">
-          <span class="pointer-events-none select-none">Services</span>
-          <svg class="w-3 h-3 pointer-events-none" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-          </svg>
-        </button>
-        <div class="dropdown-menu absolute hidden bg-sky-700 text-white rounded-b-lg pb-2 w-48">
-          <a href="#" class="block px-6 py-2 hover:bg-sky-600">Puste</a>
-        </div>
-      </div>
-      <a href="#" class="py-2 px-3 block">PUSTE</a>
-    </div>
-  </div>
-</nav>
-
-
-
-
-
-
-
-
-
-
-
-
-    <script type="module" src="/src/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
