--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,10 +17,10 @@
       
       <div class="md:hidden flex items-center">
         <button type="button" class="mobile-menu-button">
-          <div class="flex flex-col justify-between w-5 h-4 transform transition-all duration-300 origin-center">
-            <div class="bg-current h-0.5 w-full rounded transform transition-all duration-300 origin-left" id="top-bar"></div>
-            <div class="bg-current h-0.5 w-full rounded transform transition-all duration-300" id="middle-bar"></div>
-            <div class="bg-current h-0.5 w-full rounded transform transition-all duration-300 origin-left" id="bottom-bar"></div>
+          <div class="flex flex-col justify-between w-[20px] h-[16px] transform transition-all duration-300 origin-center">
+            <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300 origin-left" id="top-bar"></div>
+            <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300" id="middle-bar"></div>
+            <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300 origin-left" id="bottom-bar"></div>
           </div>
         </button>
       </div>
@@ -45,20 +45,20 @@
   </div>
 </nav>
 
-<div class="hidden flex-col items-center justify-center bg-linear-to-b from-sky-800 to-blue-600 pb-3 navigation-menu md:hidden" id="mobile-menu-dropdown"> 
-  <a href="#" class="py-2 px-3 block text-center">tEŻ POUSTE</a>
-  <a href="#" class="py-2 px-3 block text-center">puste</a>
+<div class="hidden flex-col items-center justify-start bg-linear-to-b from-sky-700 to-yellow-200 pb-3 navigation-menu md:hidden" id="mobile-menu-dropdown"> 
+  <a href="#" class="py-2 px-3 block">tEŻ POUSTE</a>
+  <a href="#" class="py-2 px-3 block">puste</a>
   
-  <div class="relative text-center "> 
-    <button type="button" class="dropdown-toggle py-2 px-3 hover:bg-sky-900 flex items-center gap-2 w-full text-center">
-   <p class="text-center w-full pointer-events-none select-none">Dropdown</p>
+  <div class="relative hidden"> 
+    <button type="button" class="dropdown-toggle py-2 px-3 hover:bg-sky-900 flex items-center gap-2 rounded">
+      <span class="pointer-events-none select-none">Services</span>
     </button>
-    <div class="dropdown-menu absolute hidden  bg-sky-700 text-white rounded-b-lg pb-2 w-48">
-      <a href="#" class="block px-6 py-2  hover:bg-sky-600">Puste</a>
+    <div class="dropdown-menu absolute hidden bg-sky-700 text-white rounded-b-lg pb-2 w-48">
+      <a href="#" class="block px-6 py-2 hover:bg-sky-600">Puste</a>
     </div>
   </div>
   
-  <a href="#" class="py-2 px-3 block text-center" >PUSTE</a>
+  <a href="#" class="py-2 px-3 block">PUSTE</a>
 </div>
 
 
