--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,11 +15,9 @@
       <a href="#" class="py-5 px-2 text-white text-2xl   font-bold">Guessnica </a>
       <div class="md:hidden flex items-center">
         <button type="button" class="mobile-menu-button">
-     <div class="flex flex-col justify-between w-[20px] h-[16px] transform transition-all duration-300 origin-center">
-    <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300 origin-left" id="top-bar"></div>
-    <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300" id="middle-bar"></div>
-    <div class="bg-current h-[2px] w-full rounded transform transition-all duration-300 origin-left" id="bottom-bar"></div>
-  </div> 
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
+          </svg>
         </button>
       </div>
     </div>
